<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="70dp"
            android:src="@drawable/ic_shoe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:lineSpacingExtra="7dp"
                    android:text="@string/main_title"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:background="@drawable/curve1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/colortext"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginBottom="13dp"
                        android:background="@color/colordevider"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textColor="@color/colortext"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
