<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signupbg">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="70dp"
            android:src="@drawable/ic_shoe" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/img_signup_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/signup"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    app:layout_constraintRight_toLeftOf="@+id/img_signup_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/signup"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:background="#0000"
                    android:drawableRight="@drawable/user"
                    android:drawablePadding="38dp"
                    android:gravity="right"
                    android:hint="@string/usename"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textColor="@color/signintext"
                    android:textColorHint="@color/signintext"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="@color/signintext" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="55dp"
                    android:background="#0000"
                    android:drawableRight="@drawable/mail"
                    android:drawablePadding="38dp"
                    android:gravity="right"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textColor="@color/signintext"
                    android:textColorHint="@color/signintext"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="@color/signintext" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:background="#0000"
                    android:drawableRight="@drawable/password"
                    android:drawablePadding="38dp"
                    android:gravity="right"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textColor="@color/signintext"

                    android:textColorHint="@color/signintext"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="63dp"
                    android:background="@color/signintext" />


            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/signup"
        android:textColor="#9e3d41"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
