<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signinbg">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="70dp"
            android:src="@drawable/ic_shoe" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/img_signin_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintRight_toLeftOf="@+id/img_signin_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/signin"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="#0000"
                    android:drawableRight="@drawable/user"
                    android:drawablePadding="38dp"
                    android:hint="@string/usename"
                    android:inputType="text"
                    android:layout_gravity="right"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textColor="@color/signintext"
                    android:textColorHint="@color/signintext"
                    android:textSize="16sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="@color/signintext" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="#0000"
                    android:gravity="right"
                    android:drawableRight="@drawable/password"
                    android:drawablePadding="38dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:padding="16dp"
                    android:textColor="@color/signintext"
                    android:textColorHint="@color/signintext"
                    android:textSize="16sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="63dp"
                    android:background="@color/signintext" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rect"
        android:gravity="center"
        android:padding="13dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="#3b4a45"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
